--- a/angular-frontend/src/app/create-employee/create-employee.component.html
+++ b/angular-frontend/src/app/create-employee/create-employee.component.html
@@ -1,3 +1,6 @@
+<div class="col-md-6 offset-md-3">
+
+
 <h3> Create Employee </h3>
 <form (ngSubmit) = "onSubmit()"> 
     <div class="form-group">
@@ -19,3 +22,5 @@
 
     <button class="btn btn-success" type="submit">Submit</button>
 </form>
+
+</div>
